# naxa

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml
apps/api/src/: main.py
apps/api/src/db/: session.py
apps/api/src/models/: map.py
apps/api/src/routes/: maps.py
apps/api/tests/: conftest.py  test_maps.py
apps/mobile/: README.md
apps/web/: index.html  package.json  vitest.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/__tests__/lib/: api.test.ts  geometry.test.ts  graph.test.ts
apps/web/src/__tests__/store/: gridStore.test.ts  uiStore.test.ts
apps/web/src/components/Canvas/: GridCanvas.tsx
apps/web/src/components/LayerPanel/: LayerPanel.tsx
apps/web/src/components/MapSetup/: MapSetupModal.tsx
apps/web/src/components/Toolbar/: Toolbar.tsx
apps/web/src/lib/: api.ts  export.ts  graph.ts  themes.ts
apps/web/src/lib/grid/: geometry.ts
apps/web/src/store/: gridStore.ts  uiStore.ts
apps/web/src/types/: index.ts
docs/: ARCHITECTURE.md  PRD.md
infra/docker/: Dockerfile.api  Dockerfile.web
