[project]
name = "naxa-api"
version = "0.1.0"
description = "Naxa grid map editor — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.19",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
    "ruff>=0.4.10",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
